# pixelpay-wallet

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  wallet.json
.github/workflows/: go.yml
cmd/: main.go
core/: get_balance.go  send_tx.go
src/: config.rs  main.rs  myapp.rs  tx.rs
wallet/: sign.go  wallet.go
