[package]
name = "pixelpay-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clipboard = "0.5.0"
dirs = "5.0.1"
eframe = "0.22.0"
env_logger = "0.10.0"
hex = "0.4.3"
rust-crypto = "0.2.36"
secp256k1 = { version = "0.27.0", features = ["rand-std"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
ureq = { version = "2.7.1", features = ["json"] }
